--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 }
 
 .btn-primary {
-    @apply bg-green-500 hover:bg-green-600 px-3 md:px-4 py-1 md:py-2 text-white duration-100 select-none w-fit;
+    @apply bg-[#0DBC58] hover:bg-green-600 px-3 md:px-4 py-1 md:py-2 text-white duration-100 select-none w-fit;
 }
 
 .hackathon-glow {
