--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,15 @@
 body {
   background: #111827;
 }
+
+.ant-timeline-item-head {
+  background: transparent !important;
+}
+
+.tail-active > .ant-timeline-item-tail {
+  @apply !bg-primary !opacity-50;
+}
+
+.tail-active:has(+ :not(.tail-active)) > .ant-timeline-item-tail {
+  @apply !bg-transparent;
+}
