update!: redesign (join section & modal)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,26 @@ body {
 .tail-active:has(+ :not(.tail-active)) > .ant-timeline-item-tail {
   @apply !bg-transparent;
 }
+
+.arrow-animation {
+  animation: arrow 1.25s ease-out;
+}
+
+@keyframes arrow {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  33% {
+    transform: translateX(50%);
+    opacity: 0;
+  }
+  66% {
+    transform: translateX(-50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
