--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,11 @@ body {
     opacity: 1;
   }
 }
+
+.hackathon-glow {
+  --tw-drop-shadow: drop-shadow(0 3px 31px rgb(255 255 255 / 5%))
+    drop-shadow(0 2px 14px rgb(3 247 37 / 50%));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
+    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
+    var(--tw-sepia) var(--tw-drop-shadow);
+}
