fix: responsive time-line

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,3 +54,7 @@ body {
     var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
     var(--tw-sepia) var(--tw-drop-shadow);
 }
+
+.leaflet-container {
+  z-index: 998 !important;
+}
