Add styles for Splide pagination

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,3 +62,11 @@ body {
 .prose {
   @apply max-w-none;
 }
+
+.splide__pagination__page {
+    background: #cccccc49 !important;
+}
+
+.splide__pagination__page.is-active {
+    background: #ffffff57 !important;
+}
